--- a/index.html
+++ b/index.html
@@ -1,11 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-      <title>I am the Title of my page</title>
+   <head>
+      <style>
+         * { box-sizing: 
+          }
+
+         title {
+            font-weight: bold;
+         }
+
+         body {
+            background-image: url("imgs/nails.jpg");
+         }
+
+         ol {
+            font-weight : bold; 
+            color: black;
+            font-size: 20px;
+         }
+
+      </style>
+      <title>Pressed Kouture</title>
       <meta charset="UTF-8">
-  </head>
-  <body>
-    <h1>I am the Body of my page</h1>
-    <p> Anything within the body of the webpage is displayed in the main browser window.</p>
-</body>
+   </head>
+   <body>
+         <div class="nav-header">
+        <img class="logo-img" src="imgs/visit-white-mountains-logo.png" alt="Nails by Rachel">
+        <div class="nav-div">
+            <ul class="nav-bar">
+                <li class="nav-bar-list"><a class="nav-bar-link" href="index.html">Home</a></li>
+                <li class="nav-bar-list"><a class="nav-bar-link" href="responsive.html">Payments Accepted</a></li>
+                <li class="nav-bar-list"><a class="nav-bar-link" href="ContactUs.html">Contact Us</a></li>
+            </ul>
+        </div>
+        <div class="search-icon">
+            <i class="fas fa-search fa-2x"></i>
+        </div>
+    </div>
+         
+      <h2> Press-On Nails by Rachel Sanborn </h2>
+      <h3> A website created to share highly sought after press-ons </h3>
+      <h4> We specialize in </h4>
+      <ol>
+            <li> Sticker art </li>
+
+            <li> Designer art </li>
+
+            <li> Swarvoski encrusted gems </li>
+
+            <li> Matte finishes </li>
+
+            <li> Glossy finishes </li>
+      </ol>
+
+      <p> 
+          If you have any special requests that require preparation, please email rachhsann@gmail.com 
+      </p> 
+      <h3> We can do anything from this;</h3>
+
+         <img src=https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTUUFg0FBNAk8XJujy_y4XgCmBSLixGLjopfA&usqp=CAU>
+
+      <h3> to this. </h3>
+
+         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRNthOmjXNgqvz6ke9cO0XpgAFtNgklP-m-HQ&usqp=CAU">
+
+      <h3> For ideas, visit the link below</h3>
+         <a href="https://www.pinterest.com/nailedbycristy/luxury-press-on-nails/">Visit Pintrest</a>
+   </body>
 </html>
