--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
          body {
             background-image: url("imgs/nails.jpg");
+            width:300px;
+            height:300px;
          }
 
          ol {
