--- a/Styles.html
+++ b/Styles.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>Pressed Kouture</title>
+    <link rel="stylesheet" href="my.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 
     <meta charset="utf-8">
@@ -14,10 +15,11 @@
             box-sizing: border-box;
         }
         body {
-            color: #878787;
+            color:#e60077;
             margin: 0;
-            font-family: sans-serif;
+            font-family: serif;
             text-align: center;
+             background: url("imgs/pinkbox.jpg");
         }
 
         img {
@@ -29,8 +31,8 @@
         }
 
         .nav-header {
-            height: 100px;
-            background: #f0f5f5;
+            height: 80px;
+            background: #ffcce6;
             display: flex;
         }
 
@@ -60,32 +62,30 @@
             font-size: 24px;
             padding: 20px;
         }
-
-        .main-header {
-            height: 300px;
-            background: url("imgs/whitemountain2.jpg") no-repeat center;
-            background-size: cover;
-        }
+        
 
         .main-header-title {
             margin-top: 0;
             padding-top: 30px;
             text-align: left;
             font-size: 2.5em;
-            color: #f7f8f9;
+            color: pink;
             text-transform: uppercase;
             font-weight: normal;
             padding-left: 75px;
-            text-shadow: 3px 2px grey;
+            text-shadow: 2px 2px grey;
+
         }
 
         .main-header-intro {
             line-height: 1.5em;
             width: 50%;
             margin: auto;
-            padding: 40px;
-            color: white;
+            padding-top:-30px;
+            color: black;
             text-align: justify;
+            font-weight: bold;
+            font-size: 20px;
         }
 
         .intro {
@@ -95,7 +95,7 @@
 
         .button {
             display: block;
-            background: #9dcc51;
+            background: #e60077;
             color: white;
             padding: 15px;
             font-size: 24px;
@@ -192,11 +192,11 @@
     <div class="nav-header">
         <div class="nav-div">
             <ul class="nav-bar">
-                <li class="nav-bar-list"><a class="nav-bar-link" href="#">Home</a>
+                <li class="nav-bar-list"><a class="nav-bar-link" href="index.html">Home</a>
                 </li>
-                <li class="nav-bar-list"><a class="nav-bar-link" href="#">Nail Styles</a>
+                <li class="nav-bar-list"><a class="nav-bar-link" href="Styles.html">Nail Styles</a>
                 </li>
-                <li class="nav-bar-list"><a class="nav-bar-link" href="#">Contact Us</a>
+                <li class="nav-bar-list"><a class="nav-bar-link" href="ContactUs.html">Contact Us</a>
                 </li>
             </ul>
         </div>
@@ -231,7 +231,7 @@
 
         <div class="card">
             <img src="imgs/brownswirl.jpg" alt="Brownswirl">
-            <h3>Squre</h3>
+            <h3>Square</h3>
             <p>
                 Square press-on nails are highly sought after. They are the standard style for french manicures and other classic looks. When worn short, the straight edges keep the nails strong, which makes them desierable for people who work with their hands often. These nails can be worn:
             </p>
