--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
+    <head>
+    <title>Pressed Kouture</title>
+    <link rel="stylesheet" href="my.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <style>
          * { box-sizing: 
           }
@@ -10,9 +16,8 @@
          }
 
          body {
-            background-image: url("imgs/nails.jpg");
-            width:300px;
-            height:300px;
+           background-color: lightpink;
+            
          }
 
          ol {
@@ -21,22 +26,55 @@
             font-size: 20px;
          }
 
+           .nav-header {
+            height: 80px;
+            background: #ffcce6;
+            display: flex;
+        }
+
+        .nav-div {
+            margin: auto;
+        }
+
+        .logo-img {
+            width: 120px;
+            margin-left: 20px;
+            color:pink;
+        }
+
+        .search-icon {
+            margin: 30px;
+        }
+
+        .nav-bar {
+            list-style-type: none;
+        }
+
+        .nav-bar-list {
+            display: inline-block;
+        }
+
+        .nav-bar-link {
+            color: #878787;
+            font-size: 24px;
+            padding: 20px;
+
+
       </style>
       <title>Pressed Kouture</title>
       <meta charset="UTF-8">
    </head>
    <body>
          <div class="nav-header">
-        <img class="logo-img" src="imgs/visit-white-mountains-logo.png" alt="Nails by Rachel">
         <div class="nav-div">
             <ul class="nav-bar">
                 <li class="nav-bar-list"><a class="nav-bar-link" href="index.html">Home</a></li>
-                <li class="nav-bar-list"><a class="nav-bar-link" href="responsive.html">Payments Accepted</a></li>
-                <li class="nav-bar-list"><a class="nav-bar-link" href="ContactUs.html">Contact Us</a></li>
+                <li class="nav-bar-list"><a class="nav-bar-link" href="Styles.html">Nail Styles</a></li>
+                <li class="nav-bar-list"><a class="nav-bar-link" href="contactus.html">Contact Us</a></li>
             </ul>
         </div>
         <div class="search-icon">
-            <i class="fas fa-search fa-2x"></i>
+            <i class="fa fa-search fa-2x" aria-hidden="true"></i>
         </div>
     </div>
          
