--- a/contactus.html
+++ b/contactus.html
@@ -39,11 +39,6 @@
             margin: auto;
         }
 
-        .logo-img {
-            width: 120px;
-            margin-left: 20px;
-        }
-
         .search-icon {
             margin: 30px;
         }
@@ -64,7 +59,7 @@
 
         .main-header {
             height: 300px;
-            background: url("imgs/pinkbox.jpg") no-repeat center;
+            background: url("imgs/pinkbox.jpg") no-repeat center; 
             background-size: cover;
         }
 
@@ -216,7 +211,7 @@
 
             <li> Nail polish/ top coats </li>
       </ul> 
-       <img src="imgs/frenchtip.jpg" alt="frenchtip">    
+       <img src="imgs/frenchtip.jpg" alt="frenchtip" style="height:300px">    
         </div>
 
         <div class="card">
