--- a/index.html
+++ b/index.html
@@ -39,11 +39,6 @@
             margin: auto;
         }
 
-        .logo-img {
-            width: 120px;
-            margin-left: 20px;
-        }
-
         .search-icon {
             margin: 30px;
         }
@@ -122,7 +117,7 @@
 
 
         a:hover {
-            color: green;
+            color: pink;
         }
 
 
