--- a/Styles.html
+++ b/Styles.html
@@ -203,7 +203,7 @@
                 </li>
                 <li class="nav-bar-list"><a class="nav-bar-link" href="Styles.html">Nail Styles</a>
                 </li>
-                <li class="nav-bar-list"><a class="nav-bar-link" href="ContactUs.html">Contact Us</a>
+                <li class="nav-bar-list"><a class="nav-bar-link" href="contactus.html">Contact Us</a>
                 </li>
             </ul>
         </div>
