--- a/contactus.html
+++ b/contactus.html
@@ -184,6 +184,10 @@
                 </li>
                 <li class="nav-bar-list"><a class="nav-bar-link" href="contactus.html">Contact Us</a>
                 </li>
+                <li class="nav-bar-list"><a class="nav-bar-link" href="HowitWorks.html">How it Works</a>
+                <li class="nav-bar-list"><a class="nav-bar-link" href="reviews.html">Reviews</a>
+                <li class="nav-bar-list"><a class="nav-bar-link" href="Bookaconsultation.html">Book a Consultation</a>    
+            </ul>
             </ul>
         </div>
         <div class="search-icon">
