--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 </li>
                 <li class="nav-bar-list"><a class="nav-bar-link" href="HowitWorks.html">How it Works</a>
                 <li class="nav-bar-list"><a class="nav-bar-link" href="reviews.html">Reviews</a>
-                <li class="nav-bar-list"><a class="nav-bar-link" href="Bookaconsultation.html">Book a Consultation</a>    
+                <li class="nav-bar-list"><a class="nav-bar-link" href="bookaconsultation.html">Book a Consultation</a>    
             </ul>
             </ul>
         </div>
