--- a/reviews.html
+++ b/reviews.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-     <title>Nail Styles</title>
+     <title>Reviews</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 
     <meta charset="utf-8">
@@ -208,8 +208,7 @@
                 </li>
                 <li class="nav-bar-list"><a class="nav-bar-link" href="HowitWorks.html">How it Works</a>
                 <li class="nav-bar-list"><a class="nav-bar-link" href="reviews.html">Reviews</a>
-                <li class="nav-bar-list"><a class="nav-bar-link" href="Bookaconsultation.html">Book a Consultation</a>    
-            </ul>
+                <li class="nav-bar-list"><a class="nav-bar-link" href="bookaconsultation.html">Book a Consultation</a>    
             </ul>
         </div>
         <div class="search-icon">
