--- a/bookaconsultation.html
+++ b/bookaconsultation.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-     <title>Book a Consultation</title>
+     <title>How it Works</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 
     <meta charset="utf-8">
