--- a/index.html
+++ b/index.html
@@ -22,13 +22,10 @@
                 </li>
                 <li class="nav-bar-list"><a class="nav-bar-link" href="contactus.html">Contact Us</a>
                 </li>
-                <li class="nav-bar-list"><a class="nav-bar-link" href="HowitWorks.html">How it Works</a>
-                <li class="nav-bar-list"><a class="nav-bar-link" href="reviews.html">Reviews</a>
-                <li class="nav-bar-list"><a class="nav-bar-link" href="Bookaconsultation.html">Book a Consultation</a>    
+                <li class="nav-bar-list"><a class="nav-bar-link" href="HowitWorks.html">How it Works</a></li>
+                <li class="nav-bar-list"><a class="nav-bar-link" href="reviews.html">Reviews</a></li>
+                <li class="nav-bar-list"><a class="nav-bar-link" href="Bookaconsultation.html">Book a Consultation</a></li>    
             </ul>
-        </div>
-        <div class="search-icon">
-            <i class="fa fa-search fa-2x" aria-hidden="true"></i>
         </div>
     </div>
 
@@ -80,10 +77,10 @@
     </div>
     <!-- End of class .box -->
 
-    <div class="footer">
-        <i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i>
-        <i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i>
-        <i class="fa fa-flickr fa-2x" aria-hidden="true"></i>
+   <div class="footer">
+        <a href="https://www.facebook.com/rachel.sanborn.568"class="fa fa-facebook-square fa-2x" aria-hidden="true"></a>
+        <a href="https://www.instagram.com/glammbyrachh/?hl=en" class="fa fa-instagram fa-2x" aria-hidden="true"></a>
+        <a href="https://www.instagram.com/pressedkouture/?hl=en"class="fa fa-instagram fa-2x" aria-hidden="true"></a>
     </div>
    </body>
 </html>
