--- a/reviews.html
+++ b/reviews.html
@@ -4,7 +4,7 @@
 <head>
      <title>Reviews</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
-    <link rel="stylesheet" href="mycss4.css"
+    <link rel="stylesheet" href="mycss4.css">
 
     <meta charset="utf-8">
 
@@ -21,67 +21,38 @@
                 </li>
                 <li class="nav-bar-list"><a class="nav-bar-link" href="contactus.html">Contact Us</a>
                 </li>
-                <li class="nav-bar-list"><a class="nav-bar-link" href="HowitWorks.html">How it Works</a>
-                <li class="nav-bar-list"><a class="nav-bar-link" href="reviews.html">Reviews</a>
-                <li class="nav-bar-list"><a class="nav-bar-link" href="bookaconsultation.html">Book a Consultation</a>    
+                <li class="nav-bar-list"><a class="nav-bar-link" href="HowitWorks.html">How it Works</a></li>
+                <li class="nav-bar-list"><a class="nav-bar-link" href="reviews.html">Reviews</a></li>
+                <li class="nav-bar-list"><a class="nav-bar-link" href="bookaconsultation.html">Book a Consultation</a></li>   
             </ul>
-        </div>
-        <div class="search-icon">
-            <i class="fa fa-search fa-2x" aria-hidden="true"></i>
         </div>
     </div>
 
     <div class="main-header">
-        <h1 class="main-header-title">Styles Offered</h1>
+        <h1 class="main-header-title">What people are saying</h1>
 
     </div>
 
-    <h2>Any nail style can be done!</h2>
-    <div class="intro">
-        <p> Whatever style you want, we can create it and tweak it to anything you desire. We will not stop until you obtain the look and shape of nail that you are looking for. Here at Pressed Kouture we always want a customer to leave feeling happy and beautiful. Look for designs down below that interest you and Rachel can make them a reality. 
-        </p>
-        <a href="http://www.google.com" class="button"> Find your new look </a>
-    </div>
+<div class="card">
+   <h2>Marissa L.</h2>
+    <p>" Rachel is very professional, you can send her a design of what you want and she'll be quick to contact you back"
+    </p>
+    <h2>Kaylee T.</h2>
+    <p>"I'm obssessed with these nails!! They came out better than what I expected from a small town nail tech."
+    </p>
+    <h2>Riley S.</h2>
+    <p>" I've gotten so many compliments on how good my nails look. I will be purchasing more nails from Rachel."
+    </p>
+    <h2>Dillon H.</h2>
+    <p> I decided to go with Rachel's press-ons for my sister's wedding rehersal instead of going to a shop. I am so glad I didnt go to a shop. The desgins on my nails were a great conversation starter and I am so excited to purchase more."
+    </p>
 
-    <div class="box">
-        <div class="card">
-            <img src="imgs/cow.jpg" alt="cow">
-            <h3>Coffin Nails</h3>
-            <p>
-                Coffin nails elongate the fingers and provide a bigger canvas for nail art. They can add a bit of edge to every outfit you try on. They can accessorize an outfit without the use of jewlery, giving you a more natural and simple look. 
-            </p>
-        </div>
-
-
-        <div class="card">
-            <img src="imgs/brownswirl.jpg" alt="Brownswirl">
-            <h3>Square</h3>
-            <p>
-                Square press-on nails are highly sought after. They are the standard style for french manicures and other classic looks. When worn short, the straight edges keep the nails strong, which makes them desierable for people who work with their hands often. These nails can be worn:
-            </p>
-            <ol>
-                <li>Short</li>
-                <li>Long</li>
-                <li>With or Without Gems</li>
-                <li>Frech Tipped</li>
-            </ol>
-        </div>
-        
-
-        <div class="card">
-            <img src="imgs/beigebox.jpg" alt="beigebox">
-            <h3>Ballerina</h3>
-            <p>
-                Ballerina nails have their name because the shape resembles a ballerina's shoe. These resemble coffin nails but often have a thinner tip than their counter-part. The shape of these nails offer a larger area to get creative. 
-            </p>
-        </div>
-
-    </div>
-
-    <div class="footer">
-        <i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i>
-        <i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i>
-        <i class="fa fa-flickr fa-2x" aria-hidden="true"></i>
+    <h1> We have many more satisfied clients that would love to give their opinion on rachel's press-on nails</h1>
+</div>
+   <div class="footer">
+        <a href="https://www.facebook.com/rachel.sanborn.568"class="fa fa-facebook-square fa-2x" aria-hidden="true"></a>
+        <a href="https://www.instagram.com/glammbyrachh/?hl=en" class="fa fa-instagram fa-2x" aria-hidden="true"></a>
+        <a href="https://www.instagram.com/pressedkouture/?hl=en"class="fa fa-instagram fa-2x" aria-hidden="true"></a>
     </div>
 </body>
 
