--- a/bookaconsultation.html
+++ b/bookaconsultation.html
@@ -19,13 +19,11 @@
     
     <header>
 
-
-
-         <button class="toggle-btn" oneclick="myFunction();">
+        <div class="toggle-btn" onselect="myFunction();">
             <span></span>
             <span></span>
             <span></span>
-        </button >
+        </div >
 
     
         <nav>
@@ -66,9 +64,9 @@
    
 
     <div class="footer">
-        <a href="https://www.facebook.com/rachel.sanborn.568"class="fa fa-facebook-square fa-2x" aria-hidden="true"></a>
+        <a href="https://www.facebook.com/rachel.sanborn.568" class="fa fa-facebook-square fa-2x" aria-hidden="true"></a>
         <a href="https://www.instagram.com/glammbyrachh/?hl=en" class="fa fa-instagram fa-2x" aria-hidden="true"></a>
-        <a href="https://www.instagram.com/pressedkouture/?hl=en"class="fa fa-instagram fa-2x" aria-hidden="true"></a>
+        <a href="https://www.instagram.com/pressedkouture/?hl=en" class="fa fa-instagram fa-2x" aria-hidden="true"></a>
     </div>
 
 <script type="text/javascript">
