--- a/reviews.html
+++ b/reviews.html
@@ -50,9 +50,10 @@
     <h1> We have many more satisfied clients that would love to give their opinion on rachel's press-on nails</h1>
 </div>
    <div class="footer">
-        <a href="https://www.facebook.com/rachel.sanborn.568"class="fa fa-facebook-square fa-2x" aria-hidden="true"></a>
-        <a href="https://www.instagram.com/glammbyrachh/?hl=en" class="fa fa-instagram fa-2x" aria-hidden="true"></a>
-        <a href="https://www.instagram.com/pressedkouture/?hl=en"class="fa fa-instagram fa-2x" aria-hidden="true"></a>
+        <a href="https://www.facebook.com/rachel.sanborn.568" class="fa fa-facebook-square fa-2x"
+        aria-hidden="true"></a>
+        <a href="https://www.instagram.com/glammbyrachh/?hl=en" class="fa fa-instagram fa-2x" aria-hidden="true"></a> 
+        <a href="https://www.instagram.com/pressedkouture/?hl=en" class="fa fa-instagram fa-2x" aria-hidden="true"></a>
     </div>
 </body>
 
