--- a/HowitWorks.html
+++ b/HowitWorks.html
@@ -38,16 +38,17 @@
 <div class="card">
     <h2>Here's how Rachel does it:</h2>
    <ol>
-        <li>She starts by measuring your nail beds to enure the perfect fit</li>
-        <li>There are several different nail tips that are selected from to find the best fit for you.</li>
+        <li>She starts by measuring your nail beds to ensure the perfect fit</li>
+        <li>There are several different nail tips that are selected from, to find the best fit for you.</li>
         <li>Design requests are printed out</li>
         <li>The nail tip is buffed and shaped to prepare for the base coat</li>
         <li>The base coat is applied three times</li>
-        <li>The nail tip is then paint with a a color gel picked by the client</li>
+        <li>The nail tip is then painted with a color gel picked by the client</li>
         <li> The design is then brought to life by Rachel</li>
     </ol>
 </div>
     <h2> All desgins can encompass a combination of gems, stickers, and other items you may like</h2> 
+    <h2> If you do not like the shpes and designs created, we can refer you to another artist who can assit with your requests.</h2>
 
 
     <div class="footer">
