--- a/bookaconsultation.html
+++ b/bookaconsultation.html
@@ -50,10 +50,10 @@
   <p>Requests:</p>
 
     <form action="/action_page.php" target="_blank">
-      <p><input class="w3-input w3-padding-16" type="text" placeholder="Name" required name="Name"></p>
-      <p><input class="w3-input w3-padding-16" type="text" placeholder="Email" required name="Email"></p>
-      <p><input class="w3-input w3-padding-16" type="text" placeholder="Subject" required name="Subject"></p>
-      <p><input class="w3-input w3-padding-16" type="text" placeholder="Message" required name="Message"></p>
+      <p><input class="w3-input w3-padding-16" type="text" placeholder="Name:" required name="Name"></p>
+      <p><input class="w3-input w3-padding-16" type="text" placeholder="Email:" required name="Email"></p>
+      <p><input class="w3-input w3-padding-16" type="text" placeholder="Subject:" required name="Subject"></p>
+      <p><input class="w3-input w3-padding-16" type="text" placeholder="Message:" required name="Message"></p>
       <p>
         <button class="w3-button w3-light-grey w3-padding-large" type="submit">
           <i class="fa fa-paper-plane"></i> SEND MESSAGE
@@ -72,10 +72,15 @@
 <script type="text/javascript">
 
 
-    function myFunction(){
-        var navbar=document.getElementById('nav');
-        navbar.classicist.toggle('show');
-    }
+ function myFunction() {
+  var x = document.getElementById("mynav");
+  if (x.className === "nav") {
+    x.className += " responsive";
+  } else {
+    x.className = "toggle-btn";
+  }
+}
+    
 </script>
 </body>
 
