--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <title>Pressed Kouture</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+    <link rel="stylesheet" href=https://fontawesome.com/icons/bars?style=solid>
     <link rel="stylesheet" href="mycss.css">
 
     <meta charset="utf-8">
@@ -12,8 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
    <body>
-       <div class="nav-header">
-        
+       <nav class="nav-header">
         <div class="nav-div">
             <ul class="nav-bar">
                 <li class="nav-bar-list"><a class="nav-bar-link" href="index.html">Home</a>
@@ -27,7 +27,7 @@
                 <li class="nav-bar-list"><a class="nav-bar-link" href="Bookaconsultation.html">Book a Consultation</a></li>    
             </ul>
         </div>
-    </div>
+    </nav>
 
     <div class="main-header">
         <h1 class="main-header-title">Pressed Kouture</h1>
