--- a/Styles.html
+++ b/Styles.html
@@ -14,9 +14,8 @@
 </head>
 
 <body>
-    <div class="nav-header">
-        <div class="nav-div">
-            <ul class="nav-bar">
+    <nav>
+        <ul class="nav-bar">
                 <li class="nav-bar-list"><a class="nav-bar-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-bar-list"><a class="nav-bar-link" href="Styles.html">Nail Styles</a>
@@ -26,9 +25,9 @@
                 <li class="nav-bar-list"><a class="nav-bar-link" href="HowitWorks.html">How it Works</a></li>
                 <li class="nav-bar-list"><a class="nav-bar-link" href="reviews.html">Reviews</a></li>
                 <li class="nav-bar-list"><a class="nav-bar-link" href="bookaconsultation.html">Book a Consultation</a></li>
-            </ul>
-        </div>
-    </div>
+        </ul>
+       
+    </nav>
 
     <div class="main-header">
         <h1 class="main-header-title">Styles Offered</h1>
