--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
 
         
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  </head>
    <body>
-       <nav class="nav-header">
-        <div class="nav-div">
+       <nav>
             <ul class="nav-bar">
                 <li class="nav-bar-list"><a class="nav-bar-link" href="index.html">Home</a>
                 </li>
@@ -26,7 +25,7 @@
                 <li class="nav-bar-list"><a class="nav-bar-link" href="reviews.html">Reviews</a></li>
                 <li class="nav-bar-list"><a class="nav-bar-link" href="Bookaconsultation.html">Book a Consultation</a></li>    
             </ul>
-        </div>
+        
     </nav>
 
     <div class="main-header">
