--- a/Styles.html
+++ b/Styles.html
@@ -46,7 +46,7 @@
             <img src="imgs/cow.jpg" alt="cow">
             <h3>Coffin Nails</h3>
             <p>
-                Coffin nails elongate the fingers and provide a bigger canvas for nail art. They can add a bit of edge to every outfit you try on. They can accessorize an outfit without the use of jewlery, giving you a more natural and simple look. 
+                Coffin nails elongate the fingers and provide a larger canvas for nail art. They can add a bit of edge to every outfit you try on. They can accessorize an outfit without the use of jewlery, giving you a more natural and simple look. 
             </p>
         </div>
 
@@ -61,7 +61,7 @@
                 <li>Short</li>
                 <li>Long</li>
                 <li>With or Without Gems</li>
-                <li>Frech Tipped</li>
+                <li>French Tipped</li>
             </ol>
         </div>
         
