--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
         <div class="main-header-intro">
            We take pride in providing high quaility press-on nails for an affordable price. Every person interested in this area should be able to look and feel pretty without breaking the bank. 
         </div>
-        
+
     </div>
 
     <div class="box">
         <div class="card">
             <img src="imgs/butterflybox.jpg" alt="butterflybox">
-           <h4> We specialize in </h4>
+           <h4> We specialize in: </h4>
       <ul>
             <li> Sticker art </li>
 
