--- a/bookaconsultation.html
+++ b/bookaconsultation.html
@@ -25,10 +25,10 @@
                 </li>
                 <li class="nav-bar-list"><a class="nav-bar-link" href="Styles.html">Nail Styles</a>
                 </li>
-                <li class="nav-bar-list"><a class="nav-bar-link" href="contactus.html">Contact Us</a>
+                <li class="nav-bar-list"><a class="nav-bar-link" href="reviews.html">Reviews</a>
                 </li>
                 <li class="nav-bar-list"><a class="nav-bar-link" href="HowitWorks.html">How it Works</a> </li>
-                <li class="nav-bar-list"><a class="nav-bar-link" href="reviews.html">Reviews</a></li>
+                <li class="nav-bar-list"><a class="nav-bar-link" href="contactus.html">Contact Us</a></li>
                 <li class="nav-bar-list"><a class="nav-bar-link" href="bookaconsultation.html">Book a Consultation</a></li>    
             </ul>
         </nav>
