--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                 </li>
                 <li class="nav-bar-list"><a class="nav-bar-link" href="Styles.html">Nail Styles</a>
                 </li>
-                <li class="nav-bar-list"><a class="nav-bar-link" href="contactus.html">Contact Us</a>
+                <li class="nav-bar-list"><a class="nav-bar-link" href="reviews.html">Reviews</a>
                 </li>
                 <li class="nav-bar-list"><a class="nav-bar-link" href="HowitWorks.html">How it Works</a></li>
-                <li class="nav-bar-list"><a class="nav-bar-link" href="reviews.html">Reviews</a></li>
+                <li class="nav-bar-list"><a class="nav-bar-link" href="contactus.html">Contact Us</a></li>
                 <li class="nav-bar-list"><a class="nav-bar-link" href="Bookaconsultation.html">Book a Consultation</a></li>    
             </ul>
         
