--- a/Styles.html
+++ b/Styles.html
@@ -38,7 +38,7 @@
     <div class="intro">
         <p> Whatever style you want, we can create it and tweak it to anything you desire. We will not stop until you obtain the look and shape of nail that you are looking for. Here at Pressed Kouture we always want a customer to leave feeling happy and beautiful. Look for designs down below that interest you and Rachel can make them a reality. 
         </p>
-        <a href="http://www.google.com" class="button"> Find your new look </a>
+        <a href="https://www.google.com/search?q=press-on+nails&rlz=1C1CHBD_enUS940US940&sxsrf=ALeKk005_B2bljWkqU6r13elkJH7-t0Exg:1620239126896&source=lnms&tbm=isch&sa=X&ved=2ahUKEwiq6O-MlbPwAhVCheAKHZ2hD7MQ_AUoAnoECAEQBA&biw=1280&bih=610" class="button"> Find your new look </a>
     </div>
 
     <div class="box">
